--- a/testpage.html
+++ b/testpage.html
@@ -12,7 +12,7 @@
         <p>Now, this one book will help you master all of the JavaScript and 
             jQuery skills that every web developer should have. To find out 
             how, <a href="">read more...</a></p>
-        <p>For customer service, call us at 1-555-555-5555.
+        <p id="service">For customer service, call us at 1-555-555-5555.
         </p>
      </body>
 </html>
